Allowing the user to specify where the initial directory of where pdf file selector will look is

--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,7 @@ crop_display_divisor = 2
 main_display_divisor = 8
 dpi = 200
 image_type = png
+file_initial_search_dir = ''
 
 [CROP_BOX]
 start_x = 1272
